[package]
name = "timber"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
async-recursion = "1.0.0"
futures = "0.3.23"
derive_builder = "0.11.2"
tokio = { version = "1.20.1", features = ["full"] }
